trunk/Archive2/52/58cad2cf309593/output
main.cpp: In function 'int main()':
main.cpp:67:61: error: cannot dynamic_cast 'ShapeList.std::array<_Tp, _Nm>::operator[]<const Shape*, 3ul>(((std::array<const Shape*, 3ul>::size_type)i))' (of type 'const value_type {aka const class Shape* const}') to type 'class Triangle*' (conversion casts away constness)
         Triangle* tri = dynamic_cast<Triangle*>(ShapeList[i]);
                                                             ^
